--- a/form.html
+++ b/form.html
@@ -18,6 +18,9 @@
             <label for="email">Email please
                 <input type="email" id= "email"placeholder="Enter your email">
             </label>
+            <label for="phone">Email please
+                <input type="number" id= "phone"placeholder="Enter your number">
+            </label>
             <br>
             <hr>
             <br>
