--- a/form.html
+++ b/form.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+       <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="table.html">Table</a></li>
+            <li><a href="form.html">Form</a></li>
+            <li><a href="https://web.programming-hero.com/dashboard">Web-progranning</a></li>
+       </ul>
+        
+            
+        </nav>
+    </header>
     <main>
         <h1>Welcome to pitha house</h1>
         <section>
